# sqlpt

./: .gitignore  LICENSE  Pipfile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
docs/: index.md  index.rst  notes.md  notes.txt  specs.py
sqlpt/: __init__.py  api.py  cli.py  college.db  query.py  service.py  sql.py  sqlpt.py
sqlpt/cli/: __init__.py  process.py  service.py
tests/: README.md  context.py  test_api.py  test_blu.py  test_classes.py  test_integration.py  test_interaction.py  test_other.py  test_unit.py
tests/ddl/: person.sql  student.sql  student_section.sql  tbl_stu.sql  tbl_stu_crs.sql  term.sql
tests/output/sql/: f.sql
tests/sql/: students.sql
tests/sql/ddl/: section.sql
tests/sql/queries/: students_1.sql  students_2.sql
