[build-system]
requires = ['setuptools>=61.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'sqlpt'
version = '0.2.0'
description = 'SQL Probing Tool'
readme = 'README.md'
authors = [{ name = 'Bryce Caine', email = 'brycecaine@gmail.com' }]
license = { file = 'MIT' }
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
]
keywords = ['sql', 'probing', 'tool', 'query']
dependencies = [
    'sqlparse == 0.4.2',
    'SQLAlchemy == 1.4.40'',
]
requires-python = '>=3.7'

[project.optional-dependencies]
dev = ['black', 'bumpver', 'isort', 'pip-tools', 'pytest']

[project.urls]
Homepage = 'https://github.com/realpython/reader'

[project.scripts]
realpython = 'reader.__main__:main'