[build-system]
requires = ['setuptools>=61.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'sqlpt'
version = '0.2.0'
description = 'SQL Probing Tool'
readme = 'README.md'
authors = [{ name = 'Bryce Caine', email = 'brycecaine@gmail.com' }]
license = { file = 'MIT' }
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
]
keywords = ['sql', 'probing', 'tool', 'query']
dependencies = [
    'sqlparse >= 0.4.2',
    'SQLAlchemy >= 1.4.40',
    'truth-table-generator >= 1.1.2',
]
requires-python = '>=3.7'

[project.urls]
Homepage = 'https://github.com/brycecaine/sqlpt'
Documentation = 'https://sqlpt.readthedocs.io'

[tool.bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

